# serializer version: 1
# name: test_if_stmt_false_literal
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.literals.IntLiteral'>: dict({
                'value': 1,
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.if_stmt.IfChain'>: dict({
            'if_stmt': dict({
              <class 'compiler.ast.if_stmt.IfStmt'>: dict({
                'cond': dict({
                  <class 'compiler.ast.literals.BoolLiteral'>: dict({
                    'value': False,
                  }),
                }),
                'true_block': dict({
                  <class 'compiler.ast.statements.StatementBlock'>: dict({
                    'stmts': list([
                      dict({
                        <class 'compiler.ast.Assignment'>: dict({
                          'lvalue': Token('IDENTIFIER', 'x'),
                          'rvalue': dict({
                            <class 'compiler.ast.literals.IntLiteral'>: dict({
                              'value': 3,
                            }),
                          }),
                        }),
                      }),
                    ]),
                  }),
                }),
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_if_stmt_false_literal.1
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
            }),
          }),
          dict({
            <class 'compiler.ast.if_stmt.IfChain'>: dict({
              'fields': dict({
                'if_stmt': dict({
                  <class 'compiler.ast.if_stmt.IfStmt'>: dict({
                    'fields': dict({
                      'cond': dict({
                        <class 'compiler.ast.literals.BoolLiteral'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Bool'>,
                        }),
                      }),
                      'true_block': dict({
                        <class 'compiler.ast.statements.StatementBlock'>: dict({
                          'fields': dict({
                            'stmts': list([
                              dict({
                                <class 'compiler.ast.Assignment'>: dict({
                                  'fields': dict({
                                    'rvalue': dict({
                                      <class 'compiler.ast.literals.IntLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.Int'>,
                                      }),
                                    }),
                                  }),
                                }),
                              }),
                            ]),
                          }),
                        }),
                      }),
                    }),
                  }),
                }),
              }),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
# name: test_if_stmt_true_literal
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'stmts': list([
        dict({
          <class 'compiler.ast.VariableDeclaration'>: dict({
            'ident': Token('IDENTIFIER', 'x'),
            'rvalue': dict({
              <class 'compiler.ast.literals.IntLiteral'>: dict({
                'value': 1,
              }),
            }),
          }),
        }),
        dict({
          <class 'compiler.ast.if_stmt.IfChain'>: dict({
            'if_stmt': dict({
              <class 'compiler.ast.if_stmt.IfStmt'>: dict({
                'cond': dict({
                  <class 'compiler.ast.literals.BoolLiteral'>: dict({
                    'value': True,
                  }),
                }),
                'true_block': dict({
                  <class 'compiler.ast.statements.StatementBlock'>: dict({
                    'stmts': list([
                      dict({
                        <class 'compiler.ast.Assignment'>: dict({
                          'lvalue': Token('IDENTIFIER', 'x'),
                          'rvalue': dict({
                            <class 'compiler.ast.literals.IntLiteral'>: dict({
                              'value': 3,
                            }),
                          }),
                        }),
                      }),
                    ]),
                  }),
                }),
              }),
            }),
          }),
        }),
      ]),
    }),
  })
# ---
# name: test_if_stmt_true_literal.1
  dict({
    <class 'compiler.ast.statements.StatementList'>: dict({
      'fields': dict({
        'stmts': list([
          dict({
            <class 'compiler.ast.VariableDeclaration'>: dict({
              'fields': dict({
                'rvalue': dict({
                  <class 'compiler.ast.literals.IntLiteral'>: dict({
                    'fields': dict({
                    }),
                    'type': <class 'compiler.langtypes.Int'>,
                  }),
                }),
              }),
            }),
          }),
          dict({
            <class 'compiler.ast.if_stmt.IfChain'>: dict({
              'fields': dict({
                'if_stmt': dict({
                  <class 'compiler.ast.if_stmt.IfStmt'>: dict({
                    'fields': dict({
                      'cond': dict({
                        <class 'compiler.ast.literals.BoolLiteral'>: dict({
                          'fields': dict({
                          }),
                          'type': <class 'compiler.langtypes.Bool'>,
                        }),
                      }),
                      'true_block': dict({
                        <class 'compiler.ast.statements.StatementBlock'>: dict({
                          'fields': dict({
                            'stmts': list([
                              dict({
                                <class 'compiler.ast.Assignment'>: dict({
                                  'fields': dict({
                                    'rvalue': dict({
                                      <class 'compiler.ast.literals.IntLiteral'>: dict({
                                        'fields': dict({
                                        }),
                                        'type': <class 'compiler.langtypes.Int'>,
                                      }),
                                    }),
                                  }),
                                }),
                              }),
                            ]),
                          }),
                        }),
                      }),
                    }),
                  }),
                }),
              }),
            }),
          }),
        ]),
      }),
    }),
  })
# ---
